RESOLVED FIXED154570
Calling importNode on shadow root causes a crash
https://bugs.webkit.org/show_bug.cgi?id=154570
Summary Calling importNode on shadow root causes a crash
Ryosuke Niwa
Reported 2016-02-22 17:43:21 PST
Calling cloneNode on shadow root causes a crash
Attachments
Fixes the bug (11.37 KB, patch)
2016-02-22 17:43 PST, Ryosuke Niwa
no flags
Uploaded the change log entries (12.26 KB, patch)
2016-02-22 17:48 PST, Ryosuke Niwa
no flags
Archive of layout-test-results from ews102 for mac-yosemite (983.23 KB, application/zip)
2016-02-22 18:41 PST, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (973.10 KB, application/zip)
2016-02-22 18:47 PST, Build Bot
no flags
Archive of layout-test-results from ews116 for mac-yosemite (1.29 MB, application/zip)
2016-02-22 18:52 PST, Build Bot
no flags
Fixed the tests (12.09 KB, patch)
2016-02-22 19:32 PST, Ryosuke Niwa
andersca: review+
Ryosuke Niwa
Comment 1 2016-02-22 17:43:44 PST
Created attachment 271974 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2016-02-22 17:48:26 PST
Created attachment 271975 [details] Uploaded the change log entries
Ryosuke Niwa
Comment 3 2016-02-22 17:49:04 PST
Build Bot
Comment 4 2016-02-22 18:41:29 PST
Comment on attachment 271975 [details] Uploaded the change log entries Attachment 271975 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/869938 Number of test failures exceeded the failure limit.
Build Bot
Comment 5 2016-02-22 18:41:34 PST
Created attachment 271978 [details] Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-02-22 18:46:59 PST
Comment on attachment 271975 [details] Uploaded the change log entries Attachment 271975 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/869954 Number of test failures exceeded the failure limit.
Build Bot
Comment 7 2016-02-22 18:47:04 PST
Created attachment 271981 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 8 2016-02-22 18:52:23 PST
Comment on attachment 271975 [details] Uploaded the change log entries Attachment 271975 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/869939 Number of test failures exceeded the failure limit.
Build Bot
Comment 9 2016-02-22 18:52:28 PST
Created attachment 271982 [details] Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Ryosuke Niwa
Comment 10 2016-02-22 19:32:36 PST
Created attachment 271985 [details] Fixed the tests
Ryosuke Niwa
Comment 11 2016-02-23 14:35:37 PST
Darin Adler
Comment 12 2016-02-23 21:56:47 PST
Comment on attachment 271985 [details] Fixed the tests View in context: https://bugs.webkit.org/attachment.cgi?id=271985&action=review > Source/WebCore/dom/Node.h:205 > Ref<Node> cloneNode(bool deep) { return cloneNodeInternal(document(), deep ? CloningOperation::Everything : CloningOperation::OnlySelf); } Not so great to have this cloneNode that takes a boolean. For use inside WebKit as opposed to in the bindings should get rid of this and replace by calls have the "deep vs. not" in the names of the functions rather than using a boolean flag.
Note You need to log in before you can comment on or make changes to this bug.